2020-11-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (eepitch-line): new variable.
	(eepitch-line): when the value in the variable `eepitch-line' is
	non-nil then run `(funcall eepitch-line line)' instead of the
	default behavior.
	(eepitch): setq eepitch-line to nil.
	(eepitch-vterm): new function.
	(eepitch-line-vterm): new function.

2020-11-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el (ee-code-c-d-base): added a link to
	`find-eev-quick-intro'.

2020-11-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (eepitch-python2): new function.
	(eepitch-python): make it use python3.

2020-11-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-grep-links): rewrote using
	`find-find-links-links-new' and added documentation.

2020-10-30  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-youtubedl-links): rewrote using
	`find-find-links-links-new'. Deleted the sexps with `find-video'
	and `code-video' that would point to a partially downloaded video.
	(ee-youtubedl-dirs): new variable.
	(ee-youtubedl-dir-links): new function.
	(ee-youtubedl-dir2, ee-youtubedl-dir3, ee-youtubedl-dir4):
	deleted.

	* eev-elinks.el (find-eface-links, find-color-links): rewrote
	using `find-find-links-links-new'.

2020-10-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-audiovideo.el (ee-find-mpv-video): use "--start=1:23"
	instead of "--start 1:23".

	* eev-pdflike.el (ee-code-pdfbackend, ee-code-pdftextbackend): add
	the missing backslashes.

2020-10-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-man): document an open bug.

2020-10-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-eevvideo-links, code-eevvideo)
	(find-code-eevvideo, ee-code-eevvideo): new functions.

	* eev-intro.el (find-audiovideo-intro): added two new sections:
	"7. `code-psnevideo'" and "7.1. `code-eevvideo'".

2020-10-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-psnevideo-links, ee-psnevideo-links)